# invoice-anomaly-explainer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: columns_mapping.json  prompts.py  settings.py
core/: exceptions.py  logging.py
data/: sqlite.py
ingestion/: csv_parser.py  models.py  normalizer.py  repository.py  service.py
pipeline/: graph.py  state.py
pipeline/nodes/: completeness_check_historical.py  completeness_check_ingestion.py  delivery.py  load_invoice.py  load_past_invoices.py  statistical_vs_history.py
schemas/: anomaly.py  columns_mapping.py  contract.py  history.py  invoice.py  junction.py  supplier_config.py
tests/: conftest.py
tests/ingestion/: test_csv_parser.py  test_normalizer.py  test_repository.py  test_service.py
tests/pipeline/nodes/: test_completeness_check_historical.py  test_completeness_check_ingestion.py  test_delivery.py  test_load_invoice.py  test_load_past_invoices.py
