[project]
name = "invoice-anomaly-explainer"
version = "0.1.0"
description = "Invoice anomaly explainer using agentic system"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph",
    "langchain-ollama",
    "chromadb",
    "pydantic",
    "pydantic-settings",
    "rapidfuzz",
    "fastapi[standard]",
    "uvicorn",
    "sqlmodel",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.3,<1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto" # no need to manually decorate each async test
pythonpath = ["."]
